Fixed issue with location-finder on Firefox.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/50cans/sass/_general.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/50cans/sass/_general.sass
@@ -19,11 +19,12 @@ img
   padding-bottom: 1em
 
 .js-location-finder-form input[type="text"]
-  padding: 1.3em
+  @include box-sizing(content-box)
 
 .js-location-finder-button
   position: relative !important
   top: 1px
+  padding: 0.35em 1.5em 0.25em !important
 
 .spit-divider
   background: #00aced
